# shoal

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF-hardening-vs-codex.md  LICENSE-MIT  README.md  SECURITY.md  mise.toml  rust-toolchain.toml  rustfmt.toml  test_bracketed.rs  test_color.rs  test_highlighter.rs  test_parse.rs  test_parse2.rs
.cargo/: audit.toml
crates/shoal/: Cargo.toml
crates/shoal-adapters/: Cargo.toml
crates/shoal-adapters/src/: catalog_input.rs  lib.rs  output.rs
crates/shoal-adapters/src/lib/: tests.rs
crates/shoal-adapters/src/output/: delimited.rs  json.rs  records.rs
crates/shoal-adapters/tests/: adapter_fixtures.rs  output_hostile.rs
crates/shoal-auth/: Cargo.toml
crates/shoal-auth/src/: lib.rs  main.rs  tests.rs
crates/shoal-auth/tests/: cli_paths.rs
crates/shoal-doctor/: Cargo.toml
crates/shoal-doctor/src/: lib.rs  main.rs
crates/shoal-eval/: Cargo.toml
crates/shoal-eval/benches/: pipeline.rs
crates/shoal-eval/src/: args.rs  builtins.rs  call.rs  channels.rs  child_context.rs  coerce.rs  command.rs  constructors.rs  data_codecs.rs  exec_state.rs  expr.rs  expr_access.rs  expr_binop.rs  finite_io.rs  frecency.rs  helpers.rs  host.rs  host_services.rs  journal.rs  lib.rs  modules.rs  namespace_signatures.rs  namespaces.rs  path_access.rs  pattern.rs  plan.rs  plan_derive.rs  plan_effects.rs  ports.rs  reef.rs  reef_builtins.rs  reef_resolve.rs  reef_state.rs  resolution.rs  script.rs  session_ctx.rs  source.rs  stmt.rs  streams.rs  tests.rs  (+2 more)
crates/shoal-eval/src/builtins/: admission.rs  copy.rs  trash.rs
crates/shoal-eval/src/channels/: eval.rs  tests.rs
crates/shoal-eval/src/command/: adapter.rs  capture.rs  external.rs  navigation.rs  redirects.rs  resolution.rs
crates/shoal-eval/src/data_codecs/: tests.rs
crates/shoal-eval/src/frecency/: tests.rs
crates/shoal-eval/src/journal/: tests.rs
crates/shoal-eval/src/plan_derive/: attribution.rs  commands.rs  inputs.rs  statements.rs  tests.rs  value_effects.rs
crates/shoal-eval/src/reef_builtins/: tests.rs
crates/shoal-eval/src/streams/: buffer.rs
crates/shoal-eval/tests/: child_context_propagation.rs  conformance.rs  exit_and_stream.rs  leash_activation.rs  ports.rs  redirection_semantics.rs  reef_integration.rs  streams.rs
crates/shoal-exec/: Cargo.toml
crates/shoal-exec/benches/: spawn.rs
crates/shoal-exec/src/: bounded.rs  cancel.rs  capture.rs  capture_budget.rs  lib.rs  main.rs  pty.rs  pty_session.rs  sandbox.rs  status.rs  watcher.rs  which.rs
crates/shoal-exec/src/capture/: tests.rs
crates/shoal-exec/src/pty/: registry.rs  service.rs  terminal.rs
crates/shoal-exec/tests/: exec.rs  sandbox.rs
crates/shoal-history/: Cargo.toml
crates/shoal-history/src/: lib.rs  main.rs
crates/shoal-history/tests/: state_root.rs
crates/shoal-host/: Cargo.toml
crates/shoal-host/src/: lib.rs
crates/shoal-kernel/: Cargo.toml
crates/shoal-kernel/benches/: protocol.rs
crates/shoal-kernel/src/: connection_io.rs  dispatch.rs  enforcement.rs  eventbus.rs  handlers_auth.rs  handlers_exec.rs  handlers_pty.rs  handlers_session.rs  handlers_stream.rs  handlers_task.rs  handlers_value.rs  lib.rs  lifecycle.rs  main.rs  peer.rs  session.rs  tests.rs  wire.rs
crates/shoal-kernel/src/eventbus/: channels.rs  durable.rs  subscriptions.rs  tests.rs
crates/shoal-kernel/src/handlers_exec/: plan.rs  run.rs  task.rs
crates/shoal-kernel/src/session/: frecency.rs  state.rs
crates/shoal-kernel/tests/: daemon.rs
crates/shoal-leash/: Cargo.toml
crates/shoal-leash/src/: effects.rs  enforce.rs  lib.rs  main.rs  policy.rs  seatbelt.rs
crates/shoal-leash/tests/: landlock.rs
crates/shoal-lsp/: Cargo.toml
crates/shoal-lsp/src/: analysis.rs  document.rs  lib.rs  main.rs  scheduler.rs  transport.rs
crates/shoal-lsp/tests/: framed_stdio.rs
crates/shoal-mcp/: Cargo.toml
crates/shoal-mcp/src/: client.rs  lib.rs  main.rs  resources.rs  subscriptions.rs  tools.rs
crates/shoal-mcp/tests/: live_kernel.rs  subscriptions.rs
crates/shoal-prompt/: Cargo.toml
crates/shoal-prompt/benches/: render.rs
crates/shoal-prompt/src/: config.rs  context.rs  fmt.rs  format.rs  lib.rs  render.rs  style.rs  themes.rs
crates/shoal-prompt/tests/: format_parser.rs  modules.rs  render_parity.rs  speed.rs
crates/shoal-prompt/themes/: default.toml  minimal.toml  rich.toml
crates/shoal-reef/: Cargo.toml
crates/shoal-reef/src/: error.rs  hashcache.rs  input.rs  lib.rs  lock.rs  manifest.rs  report.rs  resolve.rs  runner.rs  scope.rs  timestamp.rs  version.rs  view.rs
crates/shoal-secret/: Cargo.toml
crates/shoal-secret/src/: lib.rs  main.rs  tests.rs
crates/shoal-secret/tests/: cli_paths.rs
crates/shoal-syntax/: Cargo.toml
crates/shoal-syntax/benches/: syntax.rs
crates/shoal-syntax/src/: commands.rs  format.rs  format_safety.rs  lexer.rs  lib.rs  parser.rs
crates/shoal-syntax/tests/: defects.rs  dispatch.rs  properties.proptest-regressions  properties.rs  test_caret.rs
crates/shoal-value/: Cargo.toml
crates/shoal-value/benches/: table.rs
crates/shoal-value/src/: env.rs  fs_mutation.rs  json.rs  lib.rs  methods.rs  ops.rs  outcome.rs  ports.rs  render.rs  retained.rs  task.rs  value_types.rs
crates/shoal-wasm/: Cargo.toml
crates/shoal-wasm/src/: lib.rs  manifest.rs  registry.rs  value.rs
crates/shoal-wasm/wit/: shoal-plugin.wit
crates/shoal/src/: adapters.rs  args.rs  completer.rs  embedded_kernel.rs  format_files.rs  highlight.rs  kernel_cli.rs  kernel_repl.rs  keybindings.rs  main.rs  prompt.rs  repl.rs  repl_state.rs
crates/shoal/tests/: config_wiring.rs  conformance.rs  interactive.rs
fuzz/: Cargo.toml
fuzz/corpus/data_codecs/: integer_bounds  structured
fuzz/corpus/lexer/: shell_words
fuzz/corpus/parser/: control_flow
fuzz/corpus/planner/: effects
fuzz/corpus/policy/: plan
fuzz/corpus/proto_frame/: requests
fuzz/corpus/stream/: operations
fuzz/corpus/value_wire/: nested
fuzz/fuzz_targets/: data_codecs.rs  lexer.rs  parser.rs  planner.rs  policy.rs  proto_frame.rs  stream.rs  value_wire.rs
(+388 files in other folders)
