[package]
name="shoal-fuzz"
version="0.0.0"
publish=false
edition="2024"
[package.metadata]
cargo-fuzz=true
[dependencies]
libfuzzer-sys="0.4"
shoal-syntax={path="../crates/shoal-syntax"}
shoal-proto={path="../crates/shoal-proto"}
[[bin]]
name="lexer"
path="fuzz_targets/lexer.rs"
test=false
doc=false
bench=false
[[bin]]
name="parser"
path="fuzz_targets/parser.rs"
test=false
doc=false
bench=false
[[bin]]
name="proto_frame"
path="fuzz_targets/proto_frame.rs"
test=false
doc=false
bench=false
[workspace]
