[package]
name = "shoal-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
shoal-eval = { path = "../crates/shoal-eval" }
shoal-leash = { path = "../crates/shoal-leash" }
shoal-proto = { path = "../crates/shoal-proto" }
shoal-syntax = { path = "../crates/shoal-syntax" }
shoal-value = { path = "../crates/shoal-value" }

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proto_frame"
path = "fuzz_targets/proto_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "planner"
path = "fuzz_targets/planner.rs"
test = false
doc = false
bench = false

[[bin]]
name = "value_wire"
path = "fuzz_targets/value_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stream"
path = "fuzz_targets/stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy"
path = "fuzz_targets/policy.rs"
test = false
doc = false
bench = false

[workspace]
