[package]
name = "shoal-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
blake3 = "1.8"
fd-lock = "4"
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2.6"
zeroize = "1"

[[bin]]
name = "shoal-token"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
