[package]
name = "shoal-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.3"
jiff = "0.2.32"
libc = "0.2.186"
serde_json = "1.0.150"
shoal-adapters = { version = "0.1.0", path = "../shoal-adapters" }
shoal-ast = { version = "0.1.0", path = "../shoal-ast" }
shoal-exec = { version = "0.1.0", path = "../shoal-exec" }
shoal-journal = { version = "0.1.0", path = "../shoal-journal" }
shoal-syntax = { version = "0.1.0", path = "../shoal-syntax" }
shoal-value = { version = "0.1.0", path = "../shoal-value" }
