[package]
name = "shoal-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.3"
jiff = "0.2.32"
libc = "0.2.186"
serde_json = "1.0.150"
shoal-adapters = { version = "0.1.0", path = "../shoal-adapters" }
shoal-ast = { version = "0.1.0", path = "../shoal-ast" }
shoal-exec = { version = "0.1.0", path = "../shoal-exec" }
shoal-journal = { version = "0.1.0", path = "../shoal-journal" }
shoal-leash = { version = "0.1.0", path = "../shoal-leash" }
shoal-syntax = { version = "0.1.0", path = "../shoal-syntax" }
shoal-value = { version = "0.1.0", path = "../shoal-value" }
shoal-secret = { path = "../shoal-secret" }
shoal-picker = { version = "0.1.0", path = "../shoal-picker" }
shoal-reef = { version = "0.1.0", path = "../shoal-reef" }
toml = "1.1"
notify = "8.2.0"
ureq = "3.3.0"
serde_norway = "0.9.42"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3.20"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
