[package]
name = "shoal-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1.8.5"
libc = "0.2.186"
portable-pty = "0.9.0"
shoal-leash = { path = "../shoal-leash" }
tempfile = "3"
[dev-dependencies]
criterion="0.7"
tempfile="3"
[[bench]]
name="spawn"
harness=false

[[bin]]
name="shoal-sandbox-exec"
path="src/main.rs"
