[package]
name = "shoal-history"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1.0.150"
shoal-journal = { path = "../shoal-journal" }
shoal-paths = { path = "../shoal-paths" }
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "shoal-history"
path = "src/main.rs"
