[package]
name = "shoal-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ctrlc = "3"
serde = "1"
serde_json = "1"
shoal-auth = { path = "../shoal-auth" }
shoal-eval = { path = "../shoal-eval" }
shoal-exec = { path = "../shoal-exec" }
shoal-journal = { path = "../shoal-journal" }
shoal-leash = { path = "../shoal-leash" }
shoal-proto = { path = "../shoal-proto" }
shoal-syntax = { path = "../shoal-syntax" }
shoal-value = { path = "../shoal-value" }

[dev-dependencies]
tempfile = "3"
