[package]
name = "shoal-kernel"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
base64 = "0.22"
blake3 = "1.8.5"
ctrlc = "3"
serde = "1"
serde_json = "1"
shoal-ast = { version = "0.1.0", path = "../shoal-ast" }
shoal-auth = { path = "../shoal-auth" }
shoal-eval = { path = "../shoal-eval" }
shoal-exec = { path = "../shoal-exec" }
shoal-journal = { path = "../shoal-journal" }
shoal-host = { path = "../shoal-host" }
shoal-leash = { path = "../shoal-leash" }
shoal-paths = { path = "../shoal-paths" }
shoal-proto = { path = "../shoal-proto" }
shoal-syntax = { path = "../shoal-syntax" }
shoal-value = { path = "../shoal-value" }
strip-ansi-escapes = "0.2.1"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "protocol"
harness = false
