[package]
name = "shoal-leash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8.5"
glob = "0.3.3"
landlock = "0.4.5"
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "shoal-landlock-helper"
path = "src/main.rs"
