[package]
name = "shoal-leash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8.5"
glob = "0.3.3"
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

# Landlock is a Linux-only kernel LSM; on other platforms the crate's own
# libc bindings (SYS_landlock_*, prctl, O_PATH) don't exist. All uses live
# behind `#[cfg(target_os = "linux")]`, so gate the dependency to match —
# macOS builds against the Seatbelt backend instead.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "shoal-landlock-helper"
path = "src/main.rs"
