[package]
name = "shoal-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
shoal-syntax = { path = "../shoal-syntax" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
shoal-eval = { version = "0.1.0", path = "../shoal-eval" }

[[bin]]
name = "shoal-lsp"
path = "src/main.rs"
