[package]
name = "shoal-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json = "1.0.150"

[dev-dependencies]
shoal-kernel = { path = "../shoal-kernel" }
shoal-proto = { path = "../shoal-proto" }
tempfile = "3.27.0"

[[bin]]
name = "shoal-mcp"
path = "src/main.rs"
