[package]
name = "shoal-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1.0.150"
shoal-paths = { path = "../shoal-paths" }
shoal-proto = { path = "../shoal-proto" }

[dev-dependencies]
libc = "0.2.186"
shoal-kernel = { path = "../shoal-kernel" }
shoal-leash = { path = "../shoal-leash" }
shoal-proto = { path = "../shoal-proto" }
tempfile = "3.27.0"

[[bin]]
name = "shoal-mcp"
path = "src/main.rs"
