[package]
name="shoal-secret"
version="0.1.0"
edition="2024"

[lints]
workspace = true

[dependencies]
# Keep the direct feature edge: it makes the AES expanded key schedule
# zeroizable through Cargo feature unification, even though construction is
# reached through `aes-gcm` below.
aes = { version = "0.9", features = ["zeroize"] }
aes-gcm = { version = "0.11", features = ["zeroize"] }
fd-lock = "4"
rand="0.10"
zeroize = "1"
serde={version="1",features=["derive"]}
serde_json="1"
base64="0.22"
tempfile="3"
shoal-paths={path="../shoal-paths"}
[[bin]]
name="shoal-secret"
path="src/main.rs"
