[package]
name = "shoal-syntax"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shoal-ast = { version = "0.1.0", path = "../shoal-ast" }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.7"
criterion = "0.8"
[[bench]]
name="syntax"
harness=false
