[package]
name="shoal-wasm"
version="0.1.0"
edition="2024"

[lints]
workspace = true

[dependencies]
serde={version="1",features=["derive"]}
toml="1"
thiserror="2"
wasmtime={version="37",default-features=false,features=["component-model","cranelift","runtime","wat"]}
[dev-dependencies]
tempfile="3"
