[package]
name = "shoal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"
reedline = "0.49.0"
shoal-ast = { version = "0.1.0", path = "../shoal-ast" }
shoal-eval = { version = "0.1.0", path = "../shoal-eval" }
shoal-syntax = { version = "0.1.0", path = "../shoal-syntax" }
shoal-value = { version = "0.1.0", path = "../shoal-value" }

[dev-dependencies]
serde = "1.0.228"
tempfile = "3.27.0"
toml = "1.1.2"
