[package]
name = "shoal"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"
reedline = "0.49.0"
shoal-ast = { version = "0.1.0", path = "../shoal-ast" }
shoal-eval = { version = "0.1.0", path = "../shoal-eval" }
shoal-syntax = { version = "0.1.0", path = "../shoal-syntax" }
shoal-value = { version = "0.1.0", path = "../shoal-value" }
shoal-config = { path = "../shoal-config" }
shoal-adapters = { path = "../shoal-adapters" }
shoal-doctor = { path = "../shoal-doctor" }
serde_json = "1"
nu-ansi-term = "0.50.3"
toml = "1"
signal-hook = "0.3"
shoal-prompt = { version = "0.1.0", path = "../shoal-prompt" }
shoal-leash = { version = "0.1.0", path = "../shoal-leash" }
shoal-journal = { version = "0.1.0", path = "../shoal-journal" }
unicode-width = "0.2.2"

[dev-dependencies]
portable-pty = "0.9.0"
serde = "1.0.228"
tempfile = "3.27.0"
toml = "1.1.2"
